# efd

./: .gitignore  .uncrustify  .ycm_extra_conf_template.py  CMakeLists.txt  Readme.md  build  clean  compile  configure  install
cmake/modules/: FindEigen.cmake  FindHdf5.cmake  FindPetsc.cmake  FindPrecice.cmake  pch.cmake
components/Structure/: Application.cpp  Configuration.cpp  Configuration.hpp  Simulation.hpp  XmlConfigurationParser.cpp  XmlConfigurationParser.hpp
configuration/: AbaqusTest.xml  ChannelTurbulence.xml  PeriodicBox.xml
configuration/Fluid/: Cavity.xml  Cavity2D.xml  Cavity2DSfsfd.xml  Cavity3D.xml  Channel2DIfsfd.xml  Channel2DSfsfd.xml  Flap.xml  FreeFall.xml  InflowCircle.xml  MovingCircle.xml  Turek2D1.xml  Turek2D1Ifsfd.xml  Turek2D1Sfsfd.xml  Turek2D2Ifsfd.xml  Turek2D2Sfsfd.xml
configuration/FluidScenarios/: AnsysTest.xml  CavityTurbulence.xml  PressureChannelLaminar.xml  PressureChannelTurbulent.xml  TaylorGreen.xml
configuration/FluidSimulation/: Cavity.xml  Cavity2D.xml  Channel.xml  Channel2D.xml  ChannelTurbulence.xml  PlainChannel.xml  Turek2D1.xml  TurekBenchmark2D1.xml
configuration/Petsc/: Basic.conf
configuration/Precice/: Cavity3D-NoIbMapping.xml  ComputeForcesAction.py  CoupledTurek2D.xml  CouplingModeDirectForcingAction.py  FreeFall-NoIbMapping.xml  GeometryModeDirectForcingAction.py  InflowCircle-IbMapping.xml  InflowCircle-NoIbMapping.xml  MovingCircle-IbMapping.xml  MovingCircle-NoIbMapping.xml  MovingCircle.xml  SketchOfGeometryModeInFluid.xml  Turek2D-IbMapping.xml  Turek2D-NoIbMapping.xml  Turek2D.xml  Turek2D1.xml  Turek2DNoIb.xml  precice-config.xml
configuration/Report/: Template-info.csv  Template.csv  Template.html
configuration/Structure/: FreeFall.xml  InflowCircle.xml  MovingCircle.xml
documentation/: BuildGuide.md  UsageGuide.md
documentation/user/: BuildGuide.md  UsageGuide.md
scenarios/Cavity2D/: fluid-config.xml
scenarios/Flap/: ComputeForcesAction.py  CouplingModeDirectForcingAction.py
scenarios/FreeFall/: fluid-config.xml  precice-config.xml
scenarios/InflowCircle/: fluid-config.xml
scenarios/MovingCircle/: fluid-config.xml
scenarios/Turek2D1/: fluid-config.xml
scenarios/Turek2D2/: fluid-config.xml  precice-config.xml
source/: Cell.hpp  CellAccessor.hpp  CellHeap.hpp  Configuration.cpp  Configuration.h  DataStructures.cpp  DataStructures.h  Definitions.h  FlowField.cpp  FlowField.h  GhostCellsHandler.hpp  GlobalBoundaryFactory.cpp  GlobalBoundaryFactory.h  Grid.cpp  Grid.hpp  GridGeometry.hpp  Iterators.cpph  Iterators.h  LinearSolver.cpp  LinearSolver.h  Meshsize.cpp  Meshsize.h  MeshsizeFactory.h  MySimulation.hpp  MyTemplateSimulation.hpp  ParallelTopology.hpp  Parameters.h  SimpleTimer.cpp  SimpleTimer.h  Simulation.h  Simulation.hpp  SimulationParameters.hpp  Stencil.h  main.cpp  mpigenerics.hpp
source/EntryPoint/: Application.cpp  Application.hpp  Configuration.cpp  Configuration.hpp  CsvReporter.hpp  MeshsizeFactory.hpp  MySimulationBuilder.hpp  SimulationBuilder.hpp  SimulationFactory.cpp  SimulationFactory.hpp  SolverBuilder.hpp  SolverFactory.cpp  SolverFactory.hpp  VtkPlot.hpp  XmlConfigurationParser.cpp  XmlConfigurationParser.hpp  main.cpp
source/FluidSimulation/: BasicCell.cpp  BasicCell.hpp  BasicCellAccessor.hpp  Cell.hpp  CellAccessor.hpp  Configuration.cpp  Configuration.hpp  FdSimulation.hpp  FsfdDebugMemory.hpp  FsfdMemory.hpp  FsfdSolver.hpp  Grid.hpp  GridGeometry.hpp  IfsfdGhostHandlersBuilder.hpp  IfsfdMemory.hpp  LinearSolver.hpp  Memory.hpp  ParallelDistribution.hpp  Parameters.cpp  Parameters.hpp  ParticularSimulationController.hpp  PeSolver.hpp  SfsfdCellAccessor.hpp  SfsfdGhostHandlersBuilder.hpp  SfsfdMemory.hpp  SfsfdSolver.hpp  Simulation.hpp  SimulationController.hpp  SimulationParameters.hpp  Solver.hpp  SolverBuilder.hpp  SolverBuilderTraits.hpp  SolverTraits.hpp  VtkPlot.hpp  facade.cpp  facade.hpp  functions.hpp
source/Simulation/: Configuration.cpp  Configuration.hpp  FsfdMemory.hpp  FsfdSolver.cpp  FsfdSolver.hpp  Grid.cpp  Grid.hpp  GridGeometry.hpp  IfsfdCellAccessor.hpp  IfsfdGhostHandlersBuilder.hpp  IfsfdMemory.hpp  IterationResultWriter.hpp  LinearSolver.hpp  ParallelDistribution.cpp  ParallelDistribution.hpp  Parameters.hpp  ParticularSimulationController.cpp  ParticularSimulationController.hpp  PeSolver.cpp  PeSolver.hpp  PetscLinearSolver.hpp  PetscLinearSolverDefinitions.hpp  Reporter.hpp  SfsfdCellAccessor.hpp  SfsfdMemory.hpp  SimulationController.hpp  SolverBuilder.cpp  SolverBuilder.hpp  SolverBuilderTraits.hpp  SolverTraits.hpp  computemaxvelocity.hpp  facade.cpp  facade.hpp  functions.hpp
source/Solvers/: GhostHandlersUtilities.hpp  GhostInitializationActions.hpp  GhostInitializationHandlers.hpp  GhostMpiExchangeHandlers.hpp  GhostPetscExchangeActions.hpp  GhostPetscExchangeHandlers.hpp  GhostPressureStencilHanlers.hpp  LinearSolver.cpp  LinearSolver.hpp  PetscSolver.cpp  PetscSolver.hpp  PetscStructures.hpp  PoissonSolver.hpp  SORSolver.cpp  SORSolver.hpp
source/StructuredMemory/: Accessor.hpp  Memory.hpp  Pointers.hpp
source/Utility/: executablepath.hpp  pathoperations.hpp
source/parallelManagers/: BufferStencils.cpp  BufferStencils.h  PetscParallelConfiguration.cpp  PetscParallelConfiguration.h  PetscParallelManager.cpp  PetscParallelManager.h
source/solvers/: PetscSolver.cpp  PetscSolver.h  SORSolver.cpp  SORSolver.h
source/stencils/: BFInputStencils.cpp  BFInputStencils.h  BFStepInitStencil.cpp  BFStepInitStencil.h  FGHStencil.cpp  FGHStencil.h  InitTaylorGreenFlowFieldStencil.h  MaxUStencil.cpp  MaxUStencil.h  MovingWallStencils.cpp  MovingWallStencils.h  NeumannBoundaryStencils.cpp  NeumannBoundaryStencils.h  PeriodicBoundaryStencils.cpp  PeriodicBoundaryStencils.h  RHSStencil.cpp  RHSStencil.h  StencilFunctions.h  VTKStencil.cpp  VTKStencil.h  VelocityStencil.cpp  VelocityStencil.h  mystencils.hpp
source/turbulence_algebraic/: TurbulenceViscosityFactory.cpp  TurbulenceViscosityFactory.h  TurbulentFlowField.cpp  TurbulentFlowField.h  TurbulentSimulation.cpp  TurbulentSimulation.h  TurbulentSimulation.hpp
(+313 files in other folders)
